# popxl-addons

./: .clang-format  .git-blame-ignore-revs  .gitignore  CODEOWNERS  LICENSE  Makefile  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: CODEOWNERS  clang-format-check.yaml  copyright-header-check.yaml  pytest-ci.yaml  yapf-check.yaml
ci/: test_copyright.py
docs/: conf.py  index.rst  modules.rst  phased_execution.md  pipelining.md  popart_ir_extensions.rst  popart_ir_extensions.transforms.rst  welcome.md
examples/: mnist.py
examples/mnist/: README.md  VSCodeSetup.md  requirements.txt
popart_ir_extensions/: __init__.py  dot_tree.py  graph.py  graph_cache.py  graphs.py  input_factory.py  module.py  named_tensors.py  remote.py  route_tensor.py  runner.py  seeds.py  streams.py  tuple_map.py  utils.py
popart_ir_extensions/ops/: __init__.py  cross_entropy.py  streams.py
popart_ir_extensions/transforms/: __init__.py  autodiff.py  available_memory_proportion.py  batch_serialisation.py  phased.py  pipelining.py  recomputation.py
popxl_addons/: __init__.py  array_munging.py  debugging.py  dot_tree.py  graph.py  graph_cache.py  graph_common.py  input_factory.py  module.py  named_replica_grouping.py  named_tensors.py  patterns.py  performance_utils.py  reduce_remote_variables.py  remote.py  route_tensor.py  rts.py  runner.py  seed_variable.py  streams.py  task_session.py  testing_utils.py  utils.py  variable_factory.py
popxl_addons/layers/: __init__.py  conv.py  embedding.py  group_norm.py  layer_norm.py  layer_norm_distributed.py  linear.py  linear_fp8.py  linear_gq.py
popxl_addons/ops/: __init__.py  cross_entropy.py  fp8_amax_scale.py  fp8_utils.py  streams.py
tests/: conftest.py  requirements.txt
tests/unit/: test_adam.py  (+17 more)
utils/: test_copyright.py
(+156 files in other folders)
