[metadata]
name = popart-ir-extensions
#version = 0.1.0
description = `popart.ir` extensions
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
author = Graphcore Ltd.
url = https://github.com/graphcore/popart-ir-extensions
#download_urls = https://pypi.org/project/popart-ir-extensions
project_urls =
	#Documentation = https://graphcore.github.io/popart-ir-extensions
	Code = https://github.com/graphcore/popart-ir-extensions
	Issue tracker = https://github.com/graphcore/popart-ir-extensions/issues
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Topic :: Scientific/Engineering
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.6, <3.9
install_requires = 
    numpy
    more_itertools
