[metadata]
name = popxl-addons
#version = 0.1.0
description = `popxl.addons`
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
author = Graphcore Ltd.
url = https://github.com/graphcore/popxl-addons
#download_urls = https://pypi.org/project/popxl-addons
project_urls =
	#Documentation = https://graphcore.github.io/popxl-addons
	Code = https://github.com/graphcore/popxl-addons
	#Issue tracker = https://github.com/graphcore/popxl-addons/issues
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Topic :: Scientific/Engineering
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.6, <3.9
install_requires = 
    numpy
    more_itertools
    gitpython
    cppimport
    pybind11==2.6.2